@@ -1,3 +1,8 @@
+2008-06-28  Tollef Fog Heen  <tfheen@err.no>
+
+	* src/archives.c (tarobject): Refactor tarfile object skipping to ...
+	(tarfile_skip_one_forward): ... here. New function.
+
 2008-06-28  Guillem Jover  <guillem@debian.org>
 
 	* lib/dpkg-db.h (skip_slash_dotslash): Move declaration ...
